[package]
name = "bevy_p2p"
version.workspace = true
edition.workspace = true

[dependencies]
async-channel = "2.5.0"
bevy = { workspace = true, features = [
    "async_executor",
    "bevy_log",
] }
iroh = "0.92.0"
iroh-gossip = "0.92.0"
nostr-sdk = "0.43.0"
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
